         ResultSets with the same sequence of fields as Castor-generated SELECT
         for the OQL query "SELECT p FROM myapp.Product p" (for objects without
         relations the sequence is: identity, then all other fields in the same
         order as in mapping.xml). (Oleg Nitz <on@ibis.odessa.ua>)

XML:     Support for ODMG 3.0 DArray collection in the XML source code generator.
         (Contributed by Frank Thelen <frank.thelen@poet.de>)

Misc:    Support for Java 1.2 collections: Collection, Set, Map. Requires Java 1.2
         to compile, but using reflection can be made to work on Java 1.1.


Version 0.8.4  May 5 2000
--------------------------

XML:     Fixed a ClassLoader issue with the ClassDescriptorResolver

XML:     Added validation back into the generator sources

XML:     Added some changes from Frank Thelen to allow subclassing FieldInfoFactory

XML:     Fixed bug that occured when an enumeration uses uppercase values

XML:     Fixed bug with using datatype

JDO:     Where clause now supports:
         - unary operators: +, -, abs, not
         - binary operators: +, -, *, /, mod, ||, LIKE, >, >=, <, <=, =, !=, and,
         - parenthesis: passed through to SQL as in OQL
         - numbered parameters including user specified type support
         (Nissim <nissim@panix.com>)

JDO:     Fixed bug in Database when used as sychronized resource in a J2EE environment.
         Calling close() will not rollback the transaction until the J2EE server has
         completed two-phase commit and notified it. Database must be registerd with
         a JTA transaction manager using the setTransactionManager option.

JDO:     Fixed bug in key generator when using non-primitive value (e.g. Integer, String).
         Previously SQLEngine create was never called, now it is called and object properly
         recorded in transaction.

Mapping: Fixed bug that caused exception with inheritance, now inheritance works