@@ -51,13 +51,29 @@
   #
   org.exolab.castor.debug=false
 
+  # List of collection handlers for Java 1.1 and Java 1.2 run-times
+  #
+  org.exolab.castor.mapping.collections=\
+    org.exolab.castor.mapping.loader.J1CollectionHandlers,\
+    org.exolab.castor.mapping.loader.J2CollectionHandlers
+
   # List of persistence factories for the supported database servers
   #
   org.exolab.castor.jdo.engines=\
-    org.exolab.castor.jdo.engine.OracleFactory,\
-    org.exolab.castor.jdo.engine.PostgreSQLFactory,\
-    org.exolab.castor.jdo.engine.SybaseFactory,\
-    org.exolab.castor.jdo.engine.SQLServerFactory
+    org.exolab.castor.jdo.drivers.OracleFactory,\
+    org.exolab.castor.jdo.drivers.PostgreSQLFactory,\
+    org.exolab.castor.jdo.drivers.SybaseFactory,\
+    org.exolab.castor.jdo.drivers.SQLServerFactory,\
+    org.exolab.castor.jdo.drivers.DB2Factory,\
+    org.exolab.castor.jdo.drivers.GenericFactory
+
+  # List of key generator factories 
+  #
+  org.exolab.castor.jdo.keyGeneratorFactories=\
+    org.exolab.castor.jdo.drivers.MaxKeyGeneratorFactory,\
+    org.exolab.castor.jdo.drivers.HighLowKeyGeneratorFactory,\
+    org.exolab.castor.jdo.drivers.IdentityKeyGeneratorFactory,\
+    org.exolab.castor.jdo.drivers.SequenceKeyGeneratorFactory
 </pre>
     </section>
 
